# millionare_game

./: README.md  db.sqlite3  pyproject.toml
account/: forms.py  models.py  views.py
account/migrations/: 0001_initial.py  0002_customuser_best_score.py
account/templates/: base.html  leaderboard.html  login.html
game/: forms.py  models.py  urls.py  views.py
game/migrations/: 0001_initial.py
game/templates/: answer_result.html  home.html  leaderboard.html  play.html  result.html
game/templates/auth/: register.html
millionaire_game/: asgi.py  settings.py  urls.py  wsgi.py
